# Divinations-alpha

./: .env  README.md  config.json  project_structure  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.sh
.github/workflows/: test.yml
scripts/: setup_venv.sh  test_token.py
src/: main.py  run.py
src/agents/: sentiment_agent.py  trading_agent.py
src/analysisagent.egg-info/: PKG-INFO  SOURCES.txt
src/analyzers/: chart_analyzer.py  pattern_analyzer.py  transaction_analyzer.py
src/api/: server.py  websocket.py
src/data/: blockchain_data.py  blockchain_listener.py
src/models/: developer.py  metrics.py  token.py
src/static/: index.html
src/utils/: compatibility.py  config.py  fallbacks.py  image_handler.py  logging.py  rpc.py  twitter_client.py
static/: index.html
tests/: conftest.py  helpers.py  test_api.py  test_pattern_analyzer.py  test_trading_agent.py
