[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analysisagent"
version = "0.1.0"
authors = [
{ name = "Project Author", email = "author@example.com" }
]
description = "Analysis Agent Project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

